[gd_scene load_steps=14 format=2]

[ext_resource path="res://Styles/Labels/Button.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/task/quest.gd" type="Script" id=2]
[ext_resource path="res://Styles/Panels/task_panel.tres" type="StyleBox" id=3]
[ext_resource path="res://Sprites/misc/unknown.png" type="Texture" id=4]
[ext_resource path="res://Styles/Labels/timer.tres" type="DynamicFont" id=5]
[ext_resource path="res://Sprites/misc/circle.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.101961, 0.101961, 0.101961, 0.94902 )
border_color = Color( 0.898039, 0.67451, 0.0745098, 1 )
shadow_color = Color( 0.313726, 0.313726, 0.313726, 0.301961 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0588235, 0.0588235, 0.0588235, 0.94902 )
border_color = Color( 0.898039, 0.67451, 0.0745098, 1 )
shadow_color = Color( 0.313726, 0.313726, 0.313726, 0.301961 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0588235, 0.0588235, 0.0588235, 0 )
draw_center = false
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13
shadow_color = Color( 0.313726, 0.313726, 0.313726, 0.301961 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0784314, 0.0784314, 0.0784314, 0.94902 )
border_color = Color( 0.619608, 0.466667, 0.054902, 1 )
border_blend = true
shadow_color = Color( 0.313726, 0.313726, 0.313726, 0.301961 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.101961, 0.101961, 0.101961, 0.94902 )
border_color = Color( 0.898039, 0.67451, 0.0745098, 1 )
shadow_color = Color( 0, 0.54902, 1, 0.301961 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0588235, 0.0588235, 0.0588235, 0.94902 )
border_color = Color( 0.898039, 0.67451, 0.0745098, 1 )
shadow_color = Color( 0, 0.54902, 1, 0.301961 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0784314, 0.0784314, 0.0784314, 0.94902 )
border_color = Color( 0.619608, 0.466667, 0.054902, 1 )
border_blend = true
shadow_color = Color( 0, 0.54902, 1, 0.301961 )
anti_aliasing = false

[node name="quest" type="Panel"]
margin_right = 170.0
margin_bottom = 45.0
rect_min_size = Vector2( 170, 45 )
size_flags_horizontal = 0
size_flags_vertical = 8
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="."]
position = Vector2( 23, 23 )
texture = ExtResource( 4 )

[node name="bar" type="TextureProgress" parent="."]
margin_left = 48.0
margin_top = 10.0
margin_right = 560.0
margin_bottom = 522.0
rect_scale = Vector2( 0.05, 0.05 )
mouse_filter = 2
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 6 )
fill_mode = 4
tint_under = Color( 1, 1, 1, 0.101961 )
tint_progress = Color( 1, 1, 1, 0.6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="view" type="Button" parent="."]
margin_left = 85.0
margin_top = 1.0
margin_right = 169.0
margin_bottom = 44.0
focus_mode = 0
mouse_filter = 1
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="view"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "View Quest"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="done" type="Button" parent="."]
visible = false
margin_left = 85.0
margin_top = 1.0
margin_right = 169.0
margin_bottom = 44.0
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
enabled_focus_mode = 0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="done"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0.552941, 1, 1 )
text = "Complete!"
align = 1
valign = 1

[node name="time" type="Label" parent="."]
margin_left = 29.0
margin_right = 93.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_task_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_task_mouse_exited"]
[connection signal="button_down" from="view" to="." method="_on_button_down"]
[connection signal="button_down" from="done" to="." method="_on_button_down"]
[connection signal="pressed" from="done" to="." method="_on_done_pressed"]
